# salvo-vue

./: .env.example  .gitignore  Cargo.toml  README.md
crates/apis/salvo-module-infra-api/: Cargo.toml
crates/apis/salvo-module-system-api/: Cargo.toml
crates/entities/salvo-entity-demo/: Cargo.toml
crates/entities/salvo-entity-infra/: Cargo.toml  README.md
crates/entities/salvo-entity-infra/src/entity/: infra_api_access_log.rs  infra_api_error_log.rs  infra_codegen_column.rs  infra_codegen_table.rs  infra_config.rs  infra_data_source_config.rs  infra_file.rs  infra_file_config.rs  infra_file_content.rs  infra_job.rs  infra_job_log.rs  mod.rs  prelude.rs
crates/entities/salvo-entity-system/: Cargo.toml  README.md
crates/entities/salvo-entity-system/src/entity/: mod.rs  prelude.rs  system_dept.rs  system_dict_data.rs  system_dict_type.rs  system_login_log.rs  system_mail_account.rs  system_mail_log.rs  system_mail_template.rs  system_menu.rs  system_notice.rs  system_notify_message.rs  system_notify_template.rs  system_oauth2_access_token.rs  system_oauth2_approve.rs  system_oauth2_client.rs  system_oauth2_code.rs  system_oauth2_refresh_token.rs  system_operate_log.rs  system_post.rs  system_role.rs  system_role_menu.rs  system_sms_channel.rs  system_sms_code.rs  system_sms_log.rs  system_sms_template.rs  system_social_client.rs  system_social_user.rs  system_social_user_bind.rs  system_tenant.rs  system_tenant_package.rs  system_user_post.rs  system_user_role.rs  system_users.rs
crates/libs/salvo-common/: Cargo.toml
crates/libs/salvo-common-support/: Cargo.toml
crates/libs/salvo-common-support/src/: lib.rs
crates/libs/salvo-common-support/src/utils/: mod.rs
crates/libs/salvo-common-support/src/web/: resp.rs
crates/libs/salvo-common/src/: app.rs  lib.rs
crates/libs/salvo-common/src/config/: mod.rs
crates/libs/salvo-common/src/hoops/: mod.rs
crates/modules/salvo-module-demo/: Cargo.toml
crates/modules/salvo-module-infra/: Cargo.toml  README.md
crates/modules/salvo-module-system/: Cargo.toml  README.md
crates/modules/salvo-module-system/src/: main.rs
resources/: config.toml
sql/postgres/: infra.sql  system.sql
src/: main.rs
src/config/: log_config.rs
src/routers/: auth.rs  demo.rs  mod.rs  user.rs
