[workspace]
members = ["crates/apis/*", "crates/libs/*", "crates/modules/*"]
[package]
name = "salvo-vue"
version = "0.1.1"
edition = "2024"
rust-version = "1.89.0"
readme = "./README.md"

[dependencies]
anyhow = "1.0.99"
figment = { version = "0.10.19", features = ["env", "toml", "yaml"] }
jsonwebtoken = "9.3.1"
rust-embed = "8.7.2"
salvo = { version = "0.84.0", features = ["full"] }
serde = "1.0.219"
thiserror = "2.0.16"
time = "0.3.43"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
validator = { version = "0.20.0", features = ["derive"] }
ulid = "1.2.1"
argon2 = "0.5.3"
cookie = "0.18.1"
dotenvy = "0.15.7"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["std", "fmt", "env-filter", "tracing-log", "time", "local-time", "json"] }
sea-orm = { version = "1.1.16", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }
askama = "0.14.0"
rand = "0.9.2"
