[workspace]
members = ["crates/apis/*", "crates/entities/salvo-entity-demo", "crates/entities/salvo-entity-infra", "crates/entities/salvo-entity-system", "crates/libs/*", "crates/modules/*"]
[package]
name = "salvo-vue"
version = "0.1.1"
edition = "2024"
rust-version = "1.89.0"
readme = "./README.md"

[dependencies]
anyhow.workspace = true
figment.workspace = true
jsonwebtoken.workspace = true
rust-embed.workspace = true
salvo.workspace = true
serde.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
validator.workspace = true
ulid.workspace = true
argon2.workspace = true
cookie.workspace = true
dotenvy.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
sea-orm.workspace = true
askama.workspace = true
rand.workspace = true
salvo-common.workspace = true
[workspace.dependencies]
anyhow = "1.0.99"
figment = { version = "0.10.19", features = ["env", "toml", "yaml"] }
jsonwebtoken = "9.3.1"
rust-embed = "8.7.2"
salvo = { version = "0.84.0", features = ["full"] }
thiserror = "2.0.16"
time = "0.3.43"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
validator = { version = "0.20.0", features = ["derive"] }
ulid = "1.2.1"
argon2 = "0.5.3"
bcrypt = "0.17.1"
cookie = "0.18.1"
dotenvy = "0.15.7"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["std", "fmt", "env-filter", "tracing-log", "time", "local-time", "json"] }
askama = "0.14.0"
rand = "0.9.2"
sea-orm = { version = "1.1.16", features = ["runtime-tokio-native-tls", "sqlx-postgres", "chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
salvo-common-support = { path = "./crates/libs/salvo-common-support" }
salvo-common = { path = "./crates/libs/salvo-common" }
salvo-entity-system = { path = "./crates/entities/salvo-entity-system" }
salvo-entity-infra = { path = "./crates/entities/salvo-entity-infra" }
