[package]
name = "salvo-common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
salvo.workspace = true
anyhow.workspace = true
jsonwebtoken.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
salvo-common-support.workspace = true
sea-orm.workspace = true
askama.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
figment.workspace = true